--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
     <string name="tab_settings">Asetukset</string>
     <string name="tab_overview">Yleiskatsaus</string>
@@ -254,4 +254,4 @@
     <string name="ignore_battery_optimization">Ohita akun optimointi</string>
     <string name="reschedule_reminder">Ajoita muistutus uudelleen</string>
     <string name="interval_start_condition">Intervallin käynnistysehto</string>
-</resources>
+<string name="show_taken_time_in_overview">Näytä kuluva aika yleiskatsauksessa</string></resources>
