--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
     <string name="taken">تم التناول</string>
     <string name="skipped">تم التخطي</string>
@@ -274,4 +274,4 @@
     <string name="ignore_battery_optimization">تجاهل تحسين البطارية</string>
     <string name="reschedule_reminder">إعادة جدولة التذكير</string>
     <string name="interval_start_condition">حالة بدء الفاصل الزمني</string>
-</resources>
+<string name="show_taken_time_in_overview">عرض الوقت المستغرق في النظرة العامة</string></resources>
