--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
     <string name="tab_settings">Nastavení</string>
     <string name="tab_overview">Přehled</string>
@@ -264,4 +264,4 @@
     <string name="ignore_battery_optimization">Ignorovat optimalizaci baterie</string>
     <string name="reschedule_reminder">Přeplánovat připomenutí</string>
     <string name="interval_start_condition">Podmínka začátku intervalu</string>
-</resources>
+<string name="show_taken_time_in_overview">Zobrazit čas v přehledu</string></resources>
