--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
     <string name="tab_settings">Indstillinger</string>
     <string name="tab_overview">Oversigt</string>
@@ -254,4 +254,4 @@
     <string name="ignore_battery_optimization">Ignorer batterioptimering</string>
     <string name="reschedule_reminder">Flyt påmindelse</string>
     <string name="interval_start_condition">Intervallets starttilstand</string>
-</resources>
+<string name="show_taken_time_in_overview">Vis den anvendte tid i oversigten</string></resources>
