--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
     <string name="tab_settings">Einstellungen</string>
     <string name="tab_overview">Übersicht</string>
@@ -254,4 +254,4 @@
     <string name="ignore_battery_optimization">Batterieoptimierung ignorieren</string>
     <string name="reschedule_reminder">Erinnerung verschieben</string>
     <string name="interval_start_condition">Intervallstartbedingung</string>
-</resources>
+<string name="show_taken_time_in_overview">Übersicht über die benötigte Zeit anzeigen</string></resources>
