--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
     <string name="tab_settings">Ajustes</string>
     <string name="tab_overview">Resumen</string>
@@ -259,4 +259,4 @@
     <string name="ignore_battery_optimization">Ignorar la optimización de la batería</string>
     <string name="reschedule_reminder">Reprogramar recordatorio</string>
     <string name="interval_start_condition">Condición de inicio de intervalo</string>
-</resources>
+<string name="show_taken_time_in_overview">Mostrar tiempo empleado en resumen</string></resources>
