--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources xmlns:ns0="http://schemas.android.com/tools">
     <string name="tab_settings">Paramètres</string>
     <string name="tab_overview">Aperçu</string>
@@ -259,4 +259,4 @@
     <string name="ignore_battery_optimization">Ignorer l\'optimisation de la batterie</string>
     <string name="reschedule_reminder">Reporter le rappel</string>
     <string name="interval_start_condition">Condition de démarrage de l&amp;apos;intervalle</string>
-</resources>
+<string name="show_taken_time_in_overview">Afficher le temps écoulé dans l&amp;apos;aperçu</string></resources>
