--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
     <string name="tab_settings">Instellingen</string>
     <string name="tab_overview">Overzicht</string>
@@ -254,4 +254,4 @@
     <string name="ignore_battery_optimization">Batterijoptimalisatie negeren</string>
     <string name="reschedule_reminder">Herinnering opnieuw plannen</string>
     <string name="interval_start_condition">Interval startvoorwaarde</string>
-</resources>
+<string name="show_taken_time_in_overview">Toon benodigde tijd in overzicht</string></resources>
