--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
     <string name="period_end">Koniec okresu</string>
     <string name="tab_overview">Przegląd</string>
@@ -264,4 +264,4 @@
     <string name="ignore_battery_optimization">Ignoruj optymalizację baterii</string>
     <string name="reschedule_reminder">Zmień termin przypomnienia</string>
     <string name="interval_start_condition">Warunek rozpoczęcia interwału</string>
-</resources>
+<string name="show_taken_time_in_overview">Pokaż czas trwania w przeglądzie</string></resources>
