--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources xmlns:tools="http://schemas.android.com/tools">
     <string name="tab_settings">Configurações</string>
     <string name="cancel">Cancelar</string>
@@ -259,4 +259,4 @@
     <string name="ignore_battery_optimization">Ignorar a otimização da bateria</string>
     <string name="reschedule_reminder">Reagendar lembrete</string>
     <string name="interval_start_condition">Condição de início do intervalo</string>
-</resources>
+<string name="show_taken_time_in_overview">Mostrar tempo decorrido na visão geral</string></resources>
