--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
     <string name="are_you_sure_delete_reminder">Är du säker på att du vill ta bort påminnelsen?</string>
     <string name="app_version">Appversion</string>
@@ -254,4 +254,4 @@
     <string name="ignore_battery_optimization">Ignorera batterioptimering</string>
     <string name="reschedule_reminder">Schemalägg om påminnelsen</string>
     <string name="interval_start_condition">Intervallets startvillkor</string>
-</resources>
+<string name="show_taken_time_in_overview">Visa tidsåtgång i översikt</string></resources>
