--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources xmlns:ns0="http://schemas.android.com/tools">
     <string name="enable_alarm_dialog">Щоб дозволити планування точних будильників, увімкніть цю опцію для MedTimer у наступному меню</string>
     <string name="tab_overview">Огляд</string>
@@ -264,4 +264,4 @@
     <string name="ignore_battery_optimization">Ігнорувати оптимізацію батареї</string>
     <string name="reschedule_reminder">Перенести нагадування</string>
     <string name="interval_start_condition">Умова запуску інтервалу</string>
-</resources>
+<string name="show_taken_time_in_overview">Показати витрачений час в огляді</string></resources>
