--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -259,4 +259,5 @@
     <string name="ignore_battery_optimization">Ignore battery optimization</string>
     <string name="reschedule_reminder">Reschedule reminder</string>
     <string name="interval_start_condition">Interval start condition</string>
+    <string name="show_taken_time_in_overview">Show taken time in overview</string>
 </resources>
