--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -265,3 +265,4 @@
     <string name="reschedule_reminder">Přeplánovat připomenutí</string>
     <string name="interval_start_condition">Podmínka začátku intervalu</string>
 <string name="show_taken_time_in_overview">Zobrazit čas v přehledu</string></resources>
+<string name="tag_filter_active">Filtr značek aktivní. Budou exportována pouze data se shodnými značkami.</string></resources>
