--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -259,4 +259,5 @@
     <string name="ignore_battery_optimization">Ignora l\'ottimizzazione della batteria</string>
     <string name="reschedule_reminder">Ripianifica il promemoria</string>
     <string name="interval_start_condition">Condizione di inizio dell\'intervallo</string>
+<string name="tag_filter_active">Filtro tag attivo. Verranno esportati solo i dati con tag corrispondenti.</string></resources>
 <string name="show_taken_time_in_overview">Mostra il tempo impiegato nella panoramica</string></resources>
