--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -259,5 +259,6 @@
     <string name="battery_optimization_warning_title">התאמות סוללה דולקות</string>
     <string name="battery_optimization_warning_summary">אם תתקלו בבעיות של התראות שלא הופיעו, שקלו לבטל את התאמות הסוללה עבור אפליקציה זו בהגדרות ההתראות.</string>
     <string name="interval_start_condition">תנאי התחלת מחזור</string>
+    <string name="tag_filter_active">מסנן התגיות פעיל. רק נתונים עם תגיות תואמות ייוצאו.</string>
     <string name="show_taken_time_in_overview">הצג את שעת הנטילה בסקירה הכללית</string>
 </resources>
