Fix string.xml format

--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -254,5 +254,5 @@
     <string name="ignore_battery_optimization">Ohita akun optimointi</string>
     <string name="reschedule_reminder">Ajoita muistutus uudelleen</string>
     <string name="interval_start_condition">Intervallin käynnistysehto</string>
-<string name="tag_filter_active">Tunnisteiden suodatin aktiivinen. Vain tunnisteiden kanssa vastaavat tiedot viedään.</string></resources>
+<string name="tag_filter_active">Tunnisteiden suodatin aktiivinen. Vain tunnisteiden kanssa vastaavat tiedot viedään.</string>
 <string name="show_taken_time_in_overview">Näytä kuluva aika yleiskatsauksessa</string></resources>
