--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -254,5 +254,5 @@
     <string name="ignore_battery_optimization">Batterijoptimalisatie negeren</string>
     <string name="reschedule_reminder">Herinnering opnieuw plannen</string>
     <string name="interval_start_condition">Interval startvoorwaarde</string>
-<string name="tag_filter_active">Tagfilter actief. Alleen gegevens met overeenkomende tags worden geëxporteerd.</string></resources>
+<string name="tag_filter_active">Tagfilter actief. Alleen gegevens met overeenkomende tags worden geëxporteerd.</string>
 <string name="show_taken_time_in_overview">Toon benodigde tijd in overzicht</string></resources>
