--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -255,4 +255,4 @@
     <string name="reschedule_reminder">Ajoita muistutus uudelleen</string>
     <string name="interval_start_condition">Intervallin käynnistysehto</string>
 <string name="tag_filter_active">Tunnisteiden suodatin aktiivinen. Vain tunnisteiden kanssa vastaavat tiedot viedään.</string>
-<string name="show_taken_time_in_overview">Näytä kuluva aika yleiskatsauksessa</string></resources>
+<string name="show_taken_time_in_overview">Näytä kuluva aika yleiskatsauksessa</string><string name="refill">Varastotäydennys</string></resources>
