--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -255,4 +255,4 @@
     <string name="reschedule_reminder">Herinnering opnieuw plannen</string>
     <string name="interval_start_condition">Interval startvoorwaarde</string>
 <string name="tag_filter_active">Tagfilter actief. Alleen gegevens met overeenkomende tags worden geëxporteerd.</string>
-<string name="show_taken_time_in_overview">Toon benodigde tijd in overzicht</string></resources>
+<string name="show_taken_time_in_overview">Toon benodigde tijd in overzicht</string><string name="refill">Voorraad aanvullen</string></resources>
