--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -261,4 +261,5 @@
     <string name="interval_start_condition">Condition de démarrage de l&amp;apos;intervalle</string>
     <string name="tag_filter_active">Filtre de balises actif. Seules les données comportant des balises correspondantes seront exportées.</string>
     <string name="show_taken_time_in_overview">Afficher le temps écoulé dans l&amp;apos;aperçu</string>
+    <string name="refill">Réapprovisionnement des stocks</string>
 </resources>
