--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -265,4 +265,4 @@
     <string name="reschedule_reminder">Zmień termin przypomnienia</string>
     <string name="interval_start_condition">Warunek rozpoczęcia interwału</string>
 <string name="tag_filter_active">Filtr tagów aktywny. Eksportowane będą tylko dane z pasującymi tagami.</string>
-<string name="show_taken_time_in_overview">Pokaż czas trwania w przeglądzie</string></resources>
+<string name="show_taken_time_in_overview">Pokaż czas trwania w przeglądzie</string><string name="refill">Uzupełnienie zapasów</string></resources>
