--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -260,4 +260,4 @@
     <string name="reschedule_reminder">Reagendar lembrete</string>
     <string name="interval_start_condition">Condição de início do intervalo</string>
 <string name="tag_filter_active">Filtro de etiquetas ativo. Apenas os dados com etiquetas correspondentes serão exportados.</string>
-<string name="show_taken_time_in_overview">Mostrar tempo decorrido na visão geral</string></resources>
+<string name="show_taken_time_in_overview">Mostrar tempo decorrido na visão geral</string><string name="refill">Reabastecimento de estoque</string></resources>
