--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -256,4 +256,5 @@
     <string name="interval_start_condition">Intervallets startvillkor</string>
     <string name="tag_filter_active">Taggfilter aktivt. Endast data med matchande taggar kommer att exporteras.</string>
     <string name="show_taken_time_in_overview">Visa tidsåtgång i översikt</string>
+    <string name="refill">Lagerpåfyllning</string>
 </resources>
