--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -251,4 +251,5 @@
     <string name="interval_start_condition">間隔開始條件</string>
     <string name="tag_filter_active">標籤篩選已啟用。僅會匯出具有相符標籤的資料。</string>
     <string name="show_taken_time_in_overview">在總覽中顯示服用時間</string>
+    <string name="refill">庫存補充</string>
 </resources>
